--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -1,84 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linear_layout_lp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
-    android:fitsSystemWindows="true"
-    tools:context="com.example.everb.kronicle.LandingPage"
-    tools:layout_editor_absoluteY="25dp">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
-    <ImageView
-        android:id="@+id/image_ip"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_lp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginBottom="128dp"
-        android:layout_marginTop="64dp"
-        android:contentDescription="@string/kronicle"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button_ip"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kronicle" />
+        android:gravity="center"
+        app:elevation="0dp">
 
-    <Button
-        android:id="@+id/sign_in_button_ip"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="2dp"
-        android:background="@drawable/button_shape"
-        android:elevation="10dp"
-        android:fontFamily="sans-serif"
-        android:foreground="@drawable/ripple_effect"
-        android:onClick="btnSignInClick"
-        android:text="@string/sign_in"
-        android:textAlignment="center"
-        android:textColor="@color/colorBase"
-        android:textSize="18sp"
-        android:typeface="sans"
-        app:layout_constraintBottom_toTopOf="@+id/sign_up_button_ip"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_ip"
-        tools:text="@string/sign_in" />
+        <ImageView
+            android:id="@+id/kronicle_lp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/kronicle"
+            android:padding="20dp"
+            app:srcCompat="@drawable/kronicle" />
 
-    <Button
-        android:id="@+id/sign_up_button_ip"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/button_shape"
-        android:elevation="10dp"
-        android:fontFamily="sans-serif"
-        android:foreground="@drawable/ripple_effect"
-        android:onClick="btnSignUpClick"
-        android:text="@string/sign_up"
-        android:textColor="@color/colorBase"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/guest_sign_in_button_ip"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_button_ip" />
+    </android.support.design.widget.AppBarLayout>
 
-    <Button
-        android:id="@+id/guest_sign_in_button_ip"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginBottom="2dp"
-        android:background="@android:color/transparent"
-        android:fontFamily="sans-serif"
-        android:onClick="btnGuestClick"
-        android:text="@string/continue_guest"
-        android:textAllCaps="false"
-        android:textColor="@color/colorComplement"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up_button_ip" />
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout_lp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorBase"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/colorComplement"
+        app:tabTextColor="@color/colorComplement"/>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager_lp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v4.view.ViewPager>
+
+</android.support.v7.widget.LinearLayoutCompat>
