--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
 <resources>
     <!-- Main App Theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
         <item name="colorPrimary">@color/colorBase</item>
         <item name="colorPrimaryDark">@color/colorBase</item>
         <item name="colorAccent">@color/colorComplement</item>
@@ -14,6 +12,13 @@
         <item name="android:windowBackground">@drawable/splash_screen</item>
         <item name="colorPrimary">@color/colorBase</item>
         <item name="colorPrimaryDark">@color/colorBase</item>
+    </style>
+
+    <!-- Line Divider -->
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
     </style>
 
 </resources>
