--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -8,37 +8,6 @@
     tools:layout_editor_absoluteY="25dp">
 
     <ImageView
-        android:id="@+id/icon_email_su"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="@string/email"
-        android:src="@drawable/icon_email"
-        app:layout_constraintBottom_toBottomOf="@+id/email_su"
-        app:layout_constraintEnd_toStartOf="@+id/email_su"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/email_su" />
-
-    <EditText
-        android:id="@+id/email_su"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="10dp"
-        android:ems="10"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/colorBase"
-        app:layout_constraintBottom_toTopOf="@+id/full_name_su"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/icon_email_su"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
         android:id="@+id/icon_full_name_su"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -63,11 +32,58 @@
         android:hint="@string/full_name"
         android:inputType="textPersonName"
         android:textColor="@color/colorBase"
-        app:layout_constraintBottom_toTopOf="@+id/username_su"
+        app:layout_constraintBottom_toTopOf="@+id/email_su"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/icon_full_name_su"
-        app:layout_constraintTop_toBottomOf="@+id/email_su" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/icon_email_su"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/email"
+        android:src="@drawable/icon_email"
+        app:layout_constraintBottom_toBottomOf="@+id/email_su"
+        app:layout_constraintEnd_toStartOf="@+id/email_su"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/email_su"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/email_su"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="10dp"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/colorBase"
+        app:layout_constraintBottom_toTopOf="@+id/username_su"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/icon_email_su"
+        app:layout_constraintTop_toBottomOf="@+id/full_name_su" />
+
+    <ImageView
+        android:id="@+id/icon_username_su"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/username"
+        android:src="@drawable/icon_sign_in"
+        app:layout_constraintBottom_toBottomOf="@+id/username_su"
+        app:layout_constraintEnd_toStartOf="@+id/username_su"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/username_su" />
 
     <EditText
         android:id="@+id/username_su"
@@ -83,7 +99,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/icon_username_su"
-        app:layout_constraintTop_toBottomOf="@+id/full_name_su" />
+        app:layout_constraintTop_toBottomOf="@+id/email_su" />
+
+    <ImageView
+        android:id="@+id/icon_password_su"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/password"
+        android:src="@drawable/icon_password"
+        app:layout_constraintBottom_toBottomOf="@+id/password_su"
+        app:layout_constraintEnd_toStartOf="@+id/password_su"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/password_su" />
 
     <EditText
         android:id="@+id/password_su"
@@ -98,8 +129,23 @@
         app:layout_constraintBottom_toTopOf="@+id/confirm_password_su"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/icon_password_su"
         app:layout_constraintTop_toBottomOf="@+id/username_su" />
+
+    <ImageView
+        android:id="@+id/icon_confirmation_password_su"
+        android:layout_width="30dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/confirm_password"
+        android:src="@drawable/icon_password_confirmation"
+        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_su"
+        app:layout_constraintEnd_toStartOf="@+id/confirm_password_su"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/confirm_password_su" />
 
     <EditText
         android:id="@+id/confirm_password_su"
@@ -114,7 +160,7 @@
         app:layout_constraintBottom_toTopOf="@+id/sign_up_button_su"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/icon_confirmation_password_su"
         app:layout_constraintTop_toBottomOf="@+id/password_su" />
 
     <Button
@@ -134,50 +180,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirm_password_su" />
-
-    <ImageView
-        android:id="@+id/icon_username_su"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="@string/username"
-        android:src="@drawable/icon_log_in"
-        app:layout_constraintBottom_toBottomOf="@+id/username_su"
-        app:layout_constraintEnd_toStartOf="@+id/username_su"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/username_su" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="@string/password"
-        android:src="@drawable/icon_password"
-        app:layout_constraintBottom_toBottomOf="@+id/password_su"
-        app:layout_constraintEnd_toStartOf="@+id/password_su"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/password_su" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="@string/confirm_password"
-        android:src="@drawable/icon_password_confirmation"
-        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_su"
-        app:layout_constraintEnd_toStartOf="@+id/confirm_password_su"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/confirm_password_su" />
 
 </android.support.constraint.ConstraintLayout>
