--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -17,5 +17,9 @@
             android:id="@+id/about_drawer"
             android:icon="@drawable/icon_info"
             android:title="@string/about" />
+        <item
+            android:id="@+id/logout_drawer"
+            android:icon="@drawable/icon_logout"
+            android:title="@string/logout" />
     </group>
 </menu>
