--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linear_layout_nh"
     android:layout_width="match_parent"
     android:layout_height="192dp"
     android:background="@color/colorBase"
@@ -10,7 +11,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/logo_nh"
         android:layout_width="wrap_content"
         android:layout_height="125dp"
         android:background="@android:color/transparent"
