--- a/app/src/main/res/layout/timer_row_item.xml
+++ b/app/src/main/res/layout/timer_row_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="150dp"
     android:background="@drawable/linear_layout_style"
     android:orientation="vertical"
+    android:layout_marginTop="10dp"
     android:padding="5dp">
 
     <TextView
