--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -14,22 +14,22 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        android:contentDescription="@string/full_name"
+        android:contentDescription="@string/name"
         android:src="@drawable/full_name_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/full_name_su"
-        app:layout_constraintEnd_toStartOf="@+id/full_name_su"
+        app:layout_constraintBottom_toBottomOf="@+id/first_name_su"
+        app:layout_constraintEnd_toStartOf="@+id/first_name_su"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/full_name_su" />
+        app:layout_constraintTop_toTopOf="@+id/first_name_su" />
 
     <EditText
-        android:id="@+id/full_name_su"
+        android:id="@+id/first_name_su"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
         android:ems="10"
-        android:hint="@string/full_name"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         android:textColor="@color/colorBase"
         app:layout_constraintBottom_toTopOf="@+id/email_su"
@@ -68,7 +68,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/icon_email_su"
-        app:layout_constraintTop_toBottomOf="@+id/full_name_su" />
+        app:layout_constraintTop_toBottomOf="@+id/first_name_su" />
 
     <ImageView
         android:id="@+id/icon_username_su"
@@ -181,6 +181,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirm_password_su"
-        android:onClick="btnSignUpClick"/>
+        />
 
 </android.support.constraint.ConstraintLayout>
