--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,14 @@
         <item name="titleTextColor">@color/colorBase</item>
     </style>
 
+    <!-- Theme with Titlebar -->
+    <style name="TitleTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorBase</item>
+        <item name="colorPrimaryDark">@color/colorBase</item>
+        <item name="colorAccent">@color/colorComplement</item>
+        <item name="titleTextColor">@color/colorLight</item>
+    </style>
+
     <!-- Splash Screen Theme -->
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
