--- a/app/src/main/res/layout/timer_row_item.xml
+++ b/app/src/main/res/layout/timer_row_item.xml
@@ -5,9 +5,11 @@
     android:background="@drawable/linear_layout_style"
     android:orientation="vertical"
     android:layout_marginTop="10dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
-    android:padding="5dp">
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    android:elevation="5dp"
+    android:padding="5dp"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/title_tri"
@@ -23,7 +25,7 @@
         android:id="@+id/top_bar_tri"
         style="@style/Divider"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_margin="5dp"
         android:visibility="visible" />
 
@@ -63,7 +65,7 @@
         <View
             android:id="@+id/bar_a"
             style="@style/Divider"
-            android:layout_width="2dp"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:visibility="visible" />
@@ -97,7 +99,7 @@
         <View
             android:id="@+id/bar_b"
             style="@style/Divider"
-            android:layout_width="2dp"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:visibility="visible" />
